--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
-PINECONE_API_KEY = d39aea7e-9e8f-4b35-a012-f47c238d07f1
-PINECONE_API_ENV = us-east-1
-GOOGLE_API_KEY = AIzaSyBBVPYH6BYN-MBYOh6FtAshCkb6TLsggu8
+PINECONE_API_KEY = XXXXXX
+PINECONE_API_ENV = XXXXXX
+GOOGLE_API_KEY = XXXXX
